--- a/Broker.Worker/appsettings.json
+++ b/Broker.Worker/appsettings.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ConnectionStrings": {
+      "serviceBus": "Endpoint=sb://matthews-broker.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=JSOPsuBuC6TgZTHd5un6BGgu4GQ/cV+hS+ASbLA9k8o="
     }
   }
 }
